[package]
name = "motk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "motk"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
